Fixed the research page image overflow issue. I just changed the img width to 100% below the 800px media breakpoint.

--- a/resources/css/research.css
+++ b/resources/css/research.css
@@ -37,6 +37,11 @@ h2.projectTitle, h4.imageTitle {
   flex-direction: column;
 }
 
+.projectImage img {
+  width: 100%;
+  height: auto;
+}
+
 @media only screen and (min-width: 800px) {
   .projectImage div {
     flex-direction: row;
